# GGMD

./: pyproject.toml
src/GGMD/: main.py
src/GGMD.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/GGMD/generative_networks/: AutoGrow.py  JTVAE.py
src/GGMD/generative_networks/generative_models_helpers/AutoGrow/crossover/: execute_crossover.py
src/GGMD/generative_networks/generative_models_helpers/AutoGrow/crossover/smiles_merge/: smiles_merge.py
src/GGMD/generative_networks/generative_models_helpers/AutoGrow/crossover/smiles_merge/merge_functions/: alignment_and_breaks.py  dict_and_r_groups.py  merge_w_core.py
src/GGMD/generative_networks/generative_models_helpers/AutoGrow/filter/: execute_filters.py
src/GGMD/generative_networks/generative_models_helpers/AutoGrow/filter/filter_classes/filter_children_classes/: brenk_filter.py  ghose_filter.py  ghose_modified_filter.py  lipinski_lenient_filter.py  lipinski_strict_filter.py  mozziconacci_filter.py  (+3 more)
src/GGMD/generative_networks/generative_models_helpers/AutoGrow/mutation/: execute_mutations.py
src/GGMD/generative_networks/generative_models_helpers/AutoGrow/mutation/smiles_click_chem/: smiles_click_chem.py
src/GGMD/generative_networks/generative_models_helpers/JTVAE/fast_jtnn/: chemutils.py  datautils.py  jtmpn.py  jtnn_dec.py  jtnn_enc.py  jtnn_vae.py  mol_tree.py  mpn.py
src/GGMD/optimizers/: bayesian_optimization.py  genetic_optimizer.py  particle_swarm.py
src/GGMD/scorers/AMPL_pred_model/: ampl_pred_model.py
src/GGMD/scorers/LogPOctanol/: logp_octanol_scorer.py
