[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GGMD"
version = "1.0"
description = "A generalized generative molecular design framework."
authors = [
    {name = "Sean T. Black", email = "your.email@example.com"},
    {name = "Pinyi Lu", email = "your.email@example.com"},
    {name = "Jingchao Zhang", email = "your.email@example.com"}
]
license = {text = "MIT"}
dependencies = [
    # List your dependencies here, e.g., "numpy", "pandas"
    "torch>=2.0",
    "rdkit>=2020.09.5"
]

[project.scripts]
run_gmd = "GGMD.main:main"  # Entry points for scripts if applicable.

